a lot changes + core JWT updates
