# app/http/request/partners/partner_request.go
@@ -1,0 +1,5 @@
+package partners_request
+
+type PartnerRequest struct {
+	ID uint `json:"id"`
+}
