# app/http/request/partners/partners_request.go
@@ -1,0 +1,4 @@
+package partners_request
+
+type PartnersRequest struct {
+}
