# app/http/request/user/getme_request.go
@@ -1,0 +1,4 @@
+package user_request
+
+type GetMeRequest struct {
+}
