# docs/swagger.yaml
@@ -17,6 +17,15 @@ definitions:
       sessionId:
         type: string
     type: object
+  partners_request.PartnerRequest:
+    properties:
+      id:
+        type: integer
+    type: object
+  partners_request.PartnersRequest:
+    type: object
+  user_request.GetMeRequest:
+    type: object
 host: 127.0.0.1:8000
 info:
   contact:
@@ -72,4 +81,52 @@ paths:
       responses: {}
       tags:
       - Auth
+  /partners:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Partners list
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/partners_request.PartnersRequest'
+      produces:
+      - application/json
+      responses: {}
+      tags:
+      - Partners
+  /partners/partner:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Partner Detail
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/partners_request.PartnerRequest'
+      produces:
+      - application/json
+      responses: {}
+      tags:
+      - Partners
+  /user/get-me:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Get me
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/user_request.GetMeRequest'
+      produces:
+      - application/json
+      responses: {}
+      tags:
+      - User
 swagger: "2.0"
